--- a/shop/goods/templates/goods/catalog.html
+++ b/shop/goods/templates/goods/catalog.html
@@ -1,5 +1,6 @@
 {% extends "main/base.html" %}
 {% load static %}
+{% load goods_tags %}
 
 {% block content %}
 <div class="row">
@@ -41,6 +42,7 @@
         </form>
     </div>
 
+    {% tag_products as goods %}
     {% for product in goods %}
       <!-- Карта товара -->
     <div class="col-lg-4 col-md-6 p-4">
@@ -55,13 +57,15 @@
                     <p class="card-title">{{ product.name }}</p>
                 </a>
                 <p class="card-text text-truncate">{{ product.description }}</p>
-                <p class="product_id">id: 02265</p>
+                <p class="product_id">id: {{product.display_id}}</p>
                 <div class="d-flex justify-content-between">
-                    
-                    {% comment %} <p><s>100</s> $</p>
-                    <p><strong>90.00 $</strong></p>
-                    <span class="badge bg-warning text-dark">Скидка 10.00 %</span> {% endcomment %}
-                    <p><strong>{{ product.price }}</strong></p>
+                    {% if product.discount %}
+                        <p><s>{{product.price}}</s> $</p>
+                        <p><strong>{{product.sell_price}} $</strong></p>
+                        <span class="badge bg-warning text-dark">Скидка {{product.discount}} %</span>
+                    {% else %}
+                        <p><strong>{{ product.price }}</strong></p>
+                    {% endif %}
                     <a href="#" class="btn add-to-cart">
                         <img class="mx-1" src="{% static "deps/icons/cart-plus.svg" %}" alt="Catalog Icon"
                             width="32" height="32">
