--- a/shop/goods/templates/goods/catalog.html
+++ b/shop/goods/templates/goods/catalog.html
@@ -42,7 +42,7 @@
         </form>
     </div>
 
-    {% tag_products as goods %}
+    {% comment %} {% tag_products as goods %} {% endcomment %}
     {% for product in goods %}
       <!-- Карта товара -->
     <div class="col-lg-4 col-md-6 p-4">
@@ -81,14 +81,27 @@
 <nav aria-label="Page navigation example">
     <ul class="pagination justify-content-center my-4">
         <div class="custom-shadow d-flex">
-            <li class="page-item disabled">
-              <a class="page-link">Previous</a>
+            <li class="page-item {% if not goods.has_previous %}disabled{% endif %}">
+              <a class="page-link" href=" {% if goods.has_previous %} 
+              {% url "goods:category_page" slug_url goods.previous_page_number %}
+              {% else %}
+              #
+              {% endif %}">Назад</a>
             </li>
-            <li class="page-item"><a class="page-link" href="#">1</a></li>
-            <li class="page-item"><a class="page-link" href="#">2</a></li>
-            <li class="page-item"><a class="page-link" href="#">3</a></li>
+            {% for page in goods.paginator.page_range %}
+            {% if page >= goods.number|add:-2 and page <= goods.number|add:2 %}
+                <li class="page-item {% if goods.number == page %} active{% endif %}">
+                    <a class="page-link" href="{% url "goods:category_page" slug_url page %}">{{page}}</a>
+                </li>
+            {% endif %}
+            {% endfor %}
             <li class="page-item">
-              <a class="page-link" href="#">Next</a>
+              <a class="page-link {% if not goods.has_next %}disabled{% endif %}" href="
+              {% if goods.has_next %} 
+              {% url "goods:category_page" slug_url goods.next_page_number %}
+              {% else %}
+              #
+              {% endif %}">Следующая</a>
             </li>
         </div>
     </ul>
