--- a/shop/goods/templates/goods/catalog.html
+++ b/shop/goods/templates/goods/catalog.html
@@ -56,9 +56,24 @@
             {% endif %}
             <div class="card-body">
                 <a href="{% url "goods:product" product.slug %}">
-                    <p class="card-title">{{ product.name }}</p>
+                    <p class="card-title"> 
+                        {% autoescape off %}
+                        {% if product.headline %}
+                            {{ product.headline }}
+                        {% else %}
+                            {{ product.name }}
+                        {% endif %}
+                        {% endautoescape %}
                 </a>
-                <p class="card-text text-truncate">{{ product.description }}</p>
+                <p class="card-text text-truncate">
+                    {% autoescape off %}
+                        {% if product.bodyline %}
+                            {{ product.bodyline }}
+                        {% else %}
+                            {{ product.description }}
+                        {% endif %}
+                        {% endautoescape %}
+                    </p>
                 <p class="product_id">id: {{product.display_id}}</p>
                 <div class="d-flex justify-content-between">
                     {% if product.discount %}
