--- a/shop/users/templates/users/profile.html
+++ b/shop/users/templates/users/profile.html
@@ -57,7 +57,7 @@
                         <!-- Разметка корзины -->
                         <!-- Закончилась разметка корзины -->
                     </div>
-                    <a class="btn btn-dark" href="#">
+                    <a class="btn btn-dark" href="../orders/create_order.html">
                         Оформить заказ
                     </a>
                 </div>
